openrewrite: Java20 modernization